redid the entire nav bar...not responsive yet but will go back and fix

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -29,6 +29,11 @@ p {
   margin-bottom: 20px;
 }
 
+ul {
+  margin: 0;
+  padding: 0;
+}
+
 hr {
   display: block;
   height: 1px;
@@ -51,54 +56,35 @@ hr {
 
 /***************   NAVBAR    **********/
 
-.navbar-inverse .navbar-nav > li > a {
-  padding-bottom: 38px;
-  padding-top: 20px;
-  font-size: 15px;
-  line-height: 20px;
-  padding: 10px 40px;
-  /*padding: 10px 10px;*/
-  margin: auto;
-}
-
-
-.navbar-inverse .navbar-nav > li > a:hover {
-  padding-bottom: 38px;
-  padding-top: 20px;
-  font-size: 15px;
-  line-height: 20px;
-  padding: 10px 40px;
-  color: black;
-  margin: auto;
-}
-
-.navbar-inverse .navbar-nav > li > a:focus {
-  padding-bottom: 38px;
-  padding-top: 20px;
-  font-size: 15px;
-  line-height: 20px;
-  padding: 10px 40px;
-  color: black;
-  margin: auto;
-}
-
-.navbar-inverse  {
+.navbar-container  {
+  padding-top: 15px;
+  padding-bottom: 10px;
   background-color: #FFF;
-  border-color: #FFF;
-  font-weight: 200px;
-  text-align: center;
   border-bottom: 2px solid #f5f5f5;
   margin: auto;
+  text-align: center;
 }
 
-.navbar-nav {
-  padding: 10px;
-  display:inline-block;
-/*  float: right;*/
-  float: none;
-  margin: auto;
+.navbar-links li {
+  display: inline-block;
+  font-size: 15px;
+  line-height: 20px;
+  padding: 10px 80px;
+  text-decoration: none;
 }
 
+.navbar-links li:focus {
+  color: black;
+}
+
+.navbar-links a {
+  color: #9D9D9D;
+}
+
+.navbar-links a:hover {
+  color: black;
+  text-decoration: none;
+}
 
 /* ==========================================================================
    Wrap Sections
@@ -189,5 +175,6 @@ hr {
   text-align: center;
   color: #fff;
 }
+
 
 
